# latex-ocr-web

./: README.md  pyproject.toml
backend/: pyproject.toml
backend/latexocr/: app.py
container/: Dockerfile  build.sh
